...
                  ),
                  ListTile(
                    onTap: () {
                      Navigator.pushNamed(context, AboutPage.ROUTE_NAME);
                    },
                    leading: Icon(Icons.info_outline),
                    title: Text('About'),
                  ),
                ],
              ),
            ),
            appBar: AppBar(
              title: Text('Ditonton - ${_pageTitles[state.tabIndex]}'),
...
